--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -10,6 +10,11 @@
     "email": "ईमेल",
     "password": "पासवर्ड",
     "atleast_8_char_long": "कम से कम 8 कैरेक्टर लंबा",
+    "atleast_6_char_long": "कम से कम 6 अक्षर लंबा",
+    "firstName_invalid": "प्रथम नाम में केवल छोटे और बड़े अक्षर होने चाहिए",
+    "lastName_invalid": "अंतिम नाम में केवल छोटे और बड़े अक्षर होने चाहिए",
+    "password_invalid": "पासवर्ड में कम से कम एक लोअरकेस अक्षर, एक अपरकेस अक्षर, एक संख्यात्मक मान और एक विशेष अक्षर होना चाहिए",
+    "email_invalid": "ईमेल में कम से कम 8 अक्षर होने चाहिए",
     "Password_and_Confirm_password_mismatches.": "पासवर्ड और पुष्टि पासवर्ड बेमेल।",
     "confirmPassword": "पासवर्ड की पुष्टि कीजिये",
     "forgotPassword": "पासवर्ड भूल गए ?",
@@ -25,13 +30,53 @@
     "notAuthorised": "क्षमा करें! आप अधिकृत नहीं हैं!",
     "notFound": "उपयोगकर्ता नहीं मिला!",
     "successfullyRegistered": "सफलतापूर्वक पंजीकृत। कृपया स्वीकृत होने तक प्रतीक्षा करें।",
-    "login_to_admin_portal": "एडमिन पोर्टल लॉगिन",
+    "OR": "या",
+    "admin": "व्यवस्थापक",
+    "user": "उपयोगकर्ता",
+    "lowercase_check": "कम से कम एक छोटा अक्षर",
+    "uppercase_check": "कम से कम एक बड़ा अक्षर",
+    "numeric_value_check": "कम से कम एक संख्यात्मक मान",
+    "special_char_check": "कम से कम एक विशेष पात्र"
+  },
+  "userLoginPage": {
+    "title": "तलवा व्यवस्थापक",
+    "fromPalisadoes": "पलिसाडो के स्वयंसेवकों द्वारा एक खुला स्रोत अनुप्रयोग",
+    "talawa_portal": "तलावा प्रशासन पोर्टल",
+    "login": "लॉग इन करें",
+    "register": "पंजीकरण करवाना",
+    "firstName": "पहला नाम",
+    "lastName": "उपनाम",
+    "email": "ईमेल",
+    "password": "पासवर्ड",
+    "atleast_8_char_long": "कम से कम 8 कैरेक्टर लंबा",
+    "Password_and_Confirm_password_mismatches.": "पासवर्ड और पुष्टि पासवर्ड बेमेल।",
+    "confirmPassword": "पासवर्ड की पुष्टि कीजिये",
+    "forgotPassword": "पासवर्ड भूल गए ?",
+    "enterEmail": "ईमेल दर्ज करें",
+    "enterPassword": "पास वर्ड दर्ज करें",
+    "doNotOwnAnAccount": "क्या आपके पास खाता नहीं है?",
+    "talawaApiUnavailable": "तलावा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रही है? अपनी नेटवर्क कनेक्टिविटी की भी जाँच करें।",
+    "captchaError": "कैप्चा त्रुटि!",
+    "Please_check_the_captcha": "कृपया, कैप्चा जांचें।",
+    "Something_went_wrong": "कुछ गलत हुआ, कृपया कुछ समय बाद प्रयास करें।",
+    "passwordMismatches": "पासवर्ड और पुष्टि पासवर्ड मेल नहीं खाते।",
+    "fillCorrectly": "सभी विवरण सही ढंग से भरें।",
+    "notAuthorised": "क्षमा करें! आप अधिकृत नहीं हैं!",
+    "notFound": "उपयोगकर्ता नहीं मिला!",
+    "successfullyRegistered": "सफलतापूर्वक पंजीकृत। कृपया स्वीकृत होने तक प्रतीक्षा करें।",
+    "afterRegister": "पंजीकरण सफलतापूर्वक हो गया है। कृपया आपके अनुरोध को स्वीकार करने के लिए व्यवस्थापक की प्रतीक्षा करें।",
+    "userLogin": "उपयोगकर्ता लॉगिन",
     "OR": "या"
   },
   "latestEvents": {
     "eventCardTitle": "आगामी घटनाएँ",
     "eventCardSeeAll": "सभी देखें",
     "noEvents": "कोई आगामी घटनाएँ नहीं"
+  },
+  "latestPosts": {
+    "latestPostsTitle": "नवीनतम पोस्ट",
+    "seeAllLink": "सभी देखें",
+    "noPostsCreated": "कोई पोस्ट नहीं बनाई गई"
   },
   "listNavbar": {
     "talawa_portal": "तलावा प्रशासन पोर्टल",
@@ -42,8 +87,7 @@
   "leftDrawer": {
     "talawaAdminPortal": "तलावा व्यवस्थापक पोर्टल",
     "menu": "मेन्यू",
-    "organizations": "संगठन",
-    "requests": "अनुरोध",
+    "my organizations": "मेरे संगठन",
     "users": "उपयोगकर्ता",
     "logout": "लॉग आउट"
   },
@@ -78,16 +122,18 @@
     "designation": "पद",
     "email": "ईमेल",
     "searchByName": "नाम से खोजें",
-    "organizations": "संगठन",
+    "my organizations": "मेरे संगठन",
     "createOrganization": "संगठन बनाएं",
     "createSampleOrganization": " सैंपल संगठन बनाएं",
     "description": "विवरण",
     "location": "स्थान",
-    "isPublic": "सार्वजनिक है",
+    "userRegistrationRequired": "उपयोगकर्ता पंजीकरण आवश्यक",
     "visibleInSearch": "खोज में दृश्यमान",
     "displayImage": "प्रदर्शन छवि",
     "enterName": "नाम दर्ज करें",
     "sort": "छांटें",
+    "Earliest": "सबसे पुराना",
+    "Latest": "सबसे नवीनतम",
     "filter": "फ़िल्टर",
     "cancel": "रद्द करना",
     "endOfResults": "परिणामों का अंत",
@@ -136,26 +182,8 @@
     "filter": "फ़िल्टर",
     "roleUpdated": "भूमिका अपडेट की गई।",
     "noResultsFoundFor": "के लिए कोई परिणाम नहीं मिला ",
-    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
-  },
-  "requests": {
-    "title": "तलवा अनुरोध",
-    "searchByName": "नाम से खोजें",
-    "requests": "अनुरोध",
-    "name": "नाम",
-    "email": "ईमेल",
-    "accept": "स्वीकार करना",
-    "reject": "अस्वीकार",
-    "enterName": "नाम दर्ज करें",
-    "endOfResults": "परिणामों का अंत",
-    "loadingRequests": "अनुरोध लोड हो रहा है ...",
-    "noRequestFound": "कोई अनुरोध नहीं मिला।",
-    "sort": "छांटें",
-    "filter": "फ़िल्टर",
-    "userApproved": "उपयोगकर्ता स्वीकृत",
-    "userRejected": "उपयोगकर्ता अस्वीकृत",
-    "noResultsFoundFor": "के लिए कोई परिणाम नहीं मिला ",
-    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
+    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।",
+    "cancel": "रद्द करें"
   },
   "dashboard": {
     "title": "डैशबोर्ड",
@@ -410,7 +438,8 @@
     "settings": "समायोजन",
     "noData": "कोई डेटा नहीं",
     "otherSettings": "अन्य सेटिंग्स",
-    "changeLanguage": "भाषा बदलें"
+    "changeLanguage": "भाषा बदलें",
+    "manageCustomFields": "कस्टम फ़ील्ड प्रबंधन करें"
   },
   "deleteOrg": {
     "deleteOrganization": "संगठन हटाएं",
@@ -418,7 +447,8 @@
     "deleteMsg": "क्या आप इस संगठन को हटाना चाहते हैं?",
     "cancel": "रद्द करना",
     "confirmDelete": "हटाने की पुष्टि करें",
-    "longDelOrgMsg": "संगठन को हमेशा के लिए हटा देने के लिए संगठन हटाने के बटन पर क्लिक करके, उसके इवेंट्स, टैग्स और सभी संबंधित डेटा सहित सभी जानकारी हटा दी जाएगी।"
+    "longDelOrgMsg": "संगठन को हमेशा के लिए हटा देने के लिए संगठन हटाने के बटन पर क्लिक करके, उसके इवेंट्स, टैग्स और सभी संबंधित डेटा सहित सभी जानकारी हटा दी जाएगी।",
+    "successfullyDeletedSampleOrganization": "नमूना संगठन सफलतापूर्वक हटा दिया गया"
   },
   "userUpdate": {
     "firstName": "पहला नाम",
@@ -455,7 +485,7 @@
     "description": "विवरण",
     "location": "जगह",
     "displayImage": "प्रदर्शन छवि",
-    "isPublic": "सार्वजनिक",
+    "userRegistrationRequired": "उपयोगकर्ता पंजीकरण आवश्यक",
     "isVisibleInSearch": "खोज में दिखाए जा सकते हैं",
     "saveChanges": "परिवर्तनों को सुरक्षित करें",
     "cancel": "रद्द करना",
@@ -588,7 +618,12 @@
   "home": {
     "feed": "फ़ीड",
     "pinnedPosts": "पिन किए गए पोस्ट देखें",
-    "somethingOnYourMind": "आपके मन में कुछ है?"
+    "somethingOnYourMind": "आपके मन में कुछ है?",
+    "addPost": "पोस्ट जोड़ें",
+    "startPost": "एक पोस्ट शुरू करें",
+    "media": "मीडिया",
+    "event": "घटना",
+    "article": "लेख"
   },
   "settings": {
     "profileSettings": "पार्श्वचित्र समायोजन",
@@ -596,7 +631,10 @@
     "lastName": "उपनाम",
     "emailAddress": "मेल पता",
     "updateImage": "छवि अद्यतन करें",
-    "save": "बचाना"
+    "saveChanges": "परिवर्तनों को सुरक्षित करें",
+    "updateProfile": "प्रोफ़ाइल अपडेट करें",
+    "otherSettings": "अन्य सेटिंग्स",
+    "changeLanguage": "भाषा बदलें"
   },
   "donate": {
     "donateTo": "दान दें",
@@ -656,7 +694,12 @@
     "activeAds": "सक्रिय अभियान",
     "archievedAds": "संपन्न अभियान",
     "pMessage": "इस अभियान के लिए कोई विज्ञापन नहीं हैं।",
-    "delete": "हटाएँ"
+    "delete": "हटाएँ",
+    "close": "बंद करें",
+    "deleteAdvertisement": "विज्ञापन हटाएं",
+    "deleteAdvertisementMsg": "क्या आप इस विज्ञापन को हटाना चाहते हैं?",
+    "no": "नहीं",
+    "yes": "हाँ"
   },
   "userChat": {
     "chat": "बात",
@@ -666,5 +709,16 @@
   "userChatRoom": {
     "selectContact": "बातचीत शुरू करने के लिए एक संपर्क चुनें",
     "sendMessage": "मेसेज भेजें"
+  },
+  "orgProfileField": {
+    "loading": "लोड हो रहा है...",
+    "noCustomField": "कोई कस्टम फ़ील्ड उपलब्ध नहीं है",
+    "customFieldName": "फ़ील्ड का नाम",
+    "enterCustomFieldName": "फ़ील्ड का नाम दर्ज करें",
+    "customFieldType": "फ़ील्ड का प्रकार",
+    "saveChanges": "परिवर्तन सहेजें",
+    "Remove Custom Field": "कस्टम फ़ील्ड हटाएँ",
+    "fieldSuccessMessage": "फ़ील्ड सफलतापूर्वक जोड़ा गया",
+    "fieldRemovalSuccess": "फ़ील्ड सफलतापूर्वक हटा दिया गया"
   }
 }
