feat: Added pinning functionality in the create post modal (#1354)
* Added pinpost to create post modal

* Added space between choose file and pinpost label

* Removed istanbul ignore next

* Added comment for untestable branch

--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -320,7 +320,8 @@
     "Oldest": "सबसे पुराना पहले",
     "Latest": "सबसे नवीनतम पहले",
     "sortPost": "पोस्ट को क्रमित करें",
-    "tag": "आपका ब्राउज़र वीडियो टैग का समर्थन नहीं करता"
+    "tag": "आपका ब्राउज़र वीडियो टैग का समर्थन नहीं करता",
+    "pinPost": "पोस्ट को पिन करें"
   },
   "postNotFound": {
     "post": "पोस्ट",
