--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -325,7 +325,8 @@
     "Oldest": "Oldest First",
     "Latest": "Latest First",
     "sortPost": "Sort Post",
-    "tag": " Your browser does not support the video tag"
+    "tag": " Your browser does not support the video tag",
+    "pinPost": "Pin post"
   },
   "postNotFound": {
     "post": "Post",
