--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -327,7 +327,7 @@
     "Latest": "Latest First",
     "sortPost": "Sort Post",
     "tag": " Your browser does not support the video tag",
-    "postCreatedSuccess": "Congratulations! You have Posted Something."
+    "postCreatedSuccess": "Congratulations! You have Posted Something.",
     "pinPost": "Pin post"
   },
   "postNotFound": {
