--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -322,7 +322,7 @@
     "Latest": "Les plus récentes d'abord",
     "sortPost": "Trier les publications",
     "tag": "Votre navigateur ne prend pas en charge la balise vidéo",
-    "postCreatedSuccess": "Félicitations ! Vous avez publié quelque chose."
+    "postCreatedSuccess": "Félicitations ! Vous avez publié quelque chose.",
     "pinPost": "Épingler le message"
   },
   "postNotFound": {
