--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -322,7 +322,7 @@
     "Latest": "सबसे नवीनतम पहले",
     "sortPost": "पोस्ट को क्रमित करें",
     "tag": "आपका ब्राउज़र वीडियो टैग का समर्थन नहीं करता",
-    "postCreatedSuccess": "बधाई हो! आपने कुछ पोस्ट किया है।"
+    "postCreatedSuccess": "बधाई हो! आपने कुछ पोस्ट किया है।",
     "pinPost": "पोस्ट को पिन करें"
   },
   "postNotFound": {
