--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -322,7 +322,7 @@
     "Latest": "Más Recientes Primero",
     "sortPost": "Ordenar Publicaciones",
     "tag": "Su navegador no admite la etiqueta de video",
-    "postCreatedSuccess": "¡Felicidades! Has publicado algo."
+    "postCreatedSuccess": "¡Felicidades! Has publicado algo.",
     "pinPost": "Fijar publicación"
   },
   "postNotFound": {
