--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -322,7 +322,7 @@
     "Latest": "最新的优先",
     "sortPost": "排序帖子",
     "tag": "您的浏览器不支持视频标签",
-    "postCreatedSuccess": "恭喜！您已经发布了一些内容。"
+    "postCreatedSuccess": "恭喜！您已经发布了一些内容。",
     "pinPost": "针柱"
   },
   "postNotFound": {
