Enabling editing an advertisement (#1428)
* add: modifying create advertisement modal to allow editing

* adding edit button to advertisement card

* fix: adding link as prop

* adding css for the changes

* changing title of edit modal

* update: changing card layout to default layout

* fix: view button styling

* fix: edit modal header styling

* adding test for increasing code coverage

* add: test case for delete add button

* fix:tests

* eslint fix

* fix: resolved warning

* add : translations

* fix: mutation and add: refetch after updating

* fix: tests & mutation

* remove the card link && fix tests

* changes: add line, fix comment

--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -697,7 +697,11 @@
     "deleteAdvertisement": "Eliminar anuncio",
     "deleteAdvertisementMsg": "¿Desea eliminar este anuncio?",
     "no": "No",
-    "yes": "Sí"
+    "yes": "Sí",
+    "view": "Ver",
+    "edit": "Editar",
+    "editAdvertisement": "Editar Anuncio",
+    "saveChanges": "Guardar Cambios"
   },
   "userChat": {
     "chat": "Charlar",
