--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -697,7 +697,11 @@
     "deleteAdvertisement": "删除广告",
     "deleteAdvertisementMsg": "您是否要删除此广告？",
     "no": "不",
-    "yes": "是"
+    "yes": "是",
+    "view": "查看",
+    "edit": "编辑",
+    "editAdvertisement": "编辑广告",
+    "saveChanges": "保存更改"
   },
   "userChat": {
     "chat": "聊天",
