--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -711,7 +711,11 @@
     "deleteAdvertisement": "Delete Advertisement",
     "deleteAdvertisementMsg": "Do you want to remove this advertisement?",
     "no": "No",
-    "yes": "Yes"
+    "yes": "Yes",
+    "view": "View",
+    "edit": "Edit",
+    "editAdvertisement": "Edit Advertisement",
+    "saveChanges": "Save Changes"
   },
   "userChat": {
     "chat": "Chat",
