Updated UI/UX of create, and updateOrg pages. Tweaked Mutations, and queries

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -128,6 +128,15 @@
     "createSampleOrganization": "Create Sample Organization",
     "description": "Description",
     "location": "Location",
+    "address": "Address",
+    "city": "City",
+    "countryCode": "Country Code",
+    "dependentLocality": "Dependent Locality",
+    "line1": "Line 1",
+    "line2": "Line 2",
+    "postalCode": "Postal Code",
+    "sortingCode": "Sorting code",
+    "state": "State / Province",
     "userRegistrationRequired": "User Registration Required",
     "visibleInSearch": "Visible In Search",
     "displayImage": "Display Image",
@@ -486,6 +495,15 @@
     "name": "Name",
     "description": "Description",
     "location": "Location",
+    "address": "Address",
+    "city": "City",
+    "countryCode": "Country Code",
+    "line1": "Line 1",
+    "line2": "Line 2",
+    "postalCode": "Postal Code",
+    "dependentLocality": "Dependent Locality",
+    "sortingCode": "Sorting code",
+    "state": "State / Province",
     "displayImage": "Display Image",
     "userRegistrationRequired": "User Registration Required",
     "isVisibleInSearch": "Visible in Search",
