Fixed address field in queries, and added translationdata

--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -127,6 +127,15 @@
     "createSampleOrganization": "Crear organización de muestra",
     "description": "Descripción",
     "location": "Ubicación",
+    "address": "Dirección",
+    "city": "Ciudad",
+    "countryCode": "Código de País",
+    "line1": "Línea 1",
+    "line2": "Línea 2",
+    "postalCode": "Código Postal",
+    "dependentLocality": "Localidad Dependiente",
+    "sortingCode": "Código de Ordenamiento",
+    "state": "Estado / Provincia",
     "userRegistrationRequired": "Registro de usuario requerido",
     "visibleInSearch": "Visible en la búsqueda",
     "displayImage": "Mostrar imagen",
@@ -483,6 +492,15 @@
     "name": "Nombre",
     "description": "Descripción",
     "location": "ubicación",
+    "address": "Dirección",
+    "city": "Ciudad",
+    "countryCode": "Código de País",
+    "line1": "Línea 1",
+    "line2": "Línea 2",
+    "postalCode": "Código Postal",
+    "dependentLocality": "Localidad Dependiente",
+    "sortingCode": "Código de Ordenamiento",
+    "state": "Estado / Provincia",
     "displayImage": "Mostrar imagen",
     "userRegistrationRequired": "Registro de usuario requerido",
     "isVisibleInSearch": "Visible en la búsqueda",
