Corrected placeholder value and added missing fields

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -355,6 +355,8 @@
     "yes": "Yes",
     "editPost": "Edit Post",
     "postTitle": "Title",
+    "postTitle1": "Edit title of the post",
+    "information1": "Edit information of the post",
     "information": "Information",
     "image": "Image",
     "video": "Video",
