--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -350,6 +350,8 @@
     "yes": "हाँ",
     "editPost": "पोस्ट संपादित करें",
     "postTitle": "शीर्षक",
+    "postTitle1": "पोस्ट का शीर्षक संपादित करें",
+    "information1": "पोस्ट की जानकारी संपादित करें",
     "information": "जानकारी",
     "image": "छवि",
     "video": "वीडियो",
