--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -351,6 +351,8 @@
     "yes": "Sí",
     "editPost": "Editar Publicación",
     "postTitle": "Título",
+    "postTitle1": "Editar título de la publicación",
+    "information1": "Editar información de la publicación",
     "information": "Información",
     "image": "Imagen",
     "video": "Video",
