--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -350,6 +350,8 @@
     "yes": "是",
     "editPost": "编辑帖子",
     "postTitle": "标题",
+    "postTitle1": "編輯貼文標題",
+    "information1": "編輯貼文訊息",
     "information": "信息",
     "image": "图片",
     "video": "视频",
