--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -309,7 +309,7 @@
     "postDetails": "Post Details",
     "postTitle1": "Write title of the post",
     "postTitle": "Title",
-    "addMedia": "Upload Photo or Video",
+    "addMedia": "Upload Media",
     "information": "Information",
     "information1": "Write information of the post",
     "image": "Post Image",
