--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -159,7 +159,6 @@
     "manage": "Faire en sorte",
     "sampleOrganization": "Organisation d'exemple"
   },
-
   "paginationList": {
     "rowsPerPage": "lignes par page",
     "all": "Tout"
@@ -314,10 +313,9 @@
     "postDetails": "Détails de la publication",
     "postTitle1": "Écrire le titre de la publication",
     "postTitle": "Titre",
+    "addMedia": "Télécharger une photo ou une vidéo",
     "information": "Informations",
     "information1": "Écrire les informations de la publication",
-    "image": "Image de la publication",
-    "video": "Vidéo de la publication",
     "addPost": "Ajouter une publication",
     "searchTitle": "Rechercher par titre",
     "searchText": "Rechercher par texte",
@@ -331,6 +329,7 @@
     "Latest": "Les plus récentes d'abord",
     "sortPost": "Trier les publications",
     "tag": "Votre navigateur ne prend pas en charge la balise vidéo",
+    "postCreatedSuccess": "Félicitations ! Vous avez publié quelque chose.",
     "pinPost": "Épingler le message"
   },
   "postNotFound": {
