--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -313,10 +313,9 @@
     "postDetails": "Detalles de la Publicación",
     "postTitle1": "Escribir título de la publicación",
     "postTitle": "Título",
+    "addMedia": "Subir foto o video",
     "information": "Información",
     "information1": "Escribir información de la publicación",
-    "image": "Imagen de la Publicación",
-    "video": "Video de la Publicación",
     "addPost": "Agregar Publicación",
     "searchTitle": "Buscar por Título",
     "searchText": "Buscar por Texto",
@@ -330,6 +329,7 @@
     "Latest": "Más Recientes Primero",
     "sortPost": "Ordenar Publicaciones",
     "tag": "Su navegador no admite la etiqueta de video",
+    "postCreatedSuccess": "¡Felicidades! Has publicado algo.",
     "pinPost": "Fijar publicación"
   },
   "postNotFound": {
@@ -348,7 +348,6 @@
     "admin not found!": "Administrador no encontrado!",
     "roles not found!": "roles no encontrados!"
   },
-
   "orgPostCard": {
     "author": "Autor",
     "imageURL": "URL de la Imagen",
@@ -713,7 +712,6 @@
     "selectContact": "Seleccione un contacto para iniciar una conversación",
     "sendMessage": "Enviar mensaje"
   },
-
   "orgProfileField": {
     "loading": "Cargando..",
     "noCustomField": "No hay campos personalizados disponibles",
