--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -313,10 +313,9 @@
     "postDetails": "帖子详情",
     "postTitle1": "填写帖子标题",
     "postTitle": "标题",
+    "addMedia": "上传照片或视频",
     "information": "信息",
     "information1": "填写帖子信息",
-    "image": "帖子图片",
-    "video": "帖子视频",
     "addPost": "添加帖子",
     "searchTitle": "按标题搜索",
     "searchText": "按文本搜索",
@@ -330,6 +329,7 @@
     "Latest": "最新的优先",
     "sortPost": "排序帖子",
     "tag": "您的浏览器不支持视频标签",
+    "postCreatedSuccess": "恭喜！您已经发布了一些内容。",
     "pinPost": "针柱"
   },
   "postNotFound": {
