Corrected Add Admin Button's functionality

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -548,6 +548,7 @@
   "memberDetail": {
     "title": "User Details",
     "addAdmin": "Add Admin",
+    "alreadyIsAdmin": "Member is already an Admin",
     "organizations": "Organizations",
     "events": "Events",
     "role": "Role",
