--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -544,6 +544,7 @@
   "memberDetail": {
     "title": "Detalles del usuario",
     "addAdmin": "Agregar administrador",
+    "alreadyIsAdmin": "El Miembro ya es Administrador",
     "organizations": "Organizaciones",
     "events": "Eventos",
     "role": "Rol",
