--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -441,6 +441,8 @@
   "orgSettings": {
     "title": "Paramètre Talawa",
     "pageName": "Paramètres",
+    "generalSettings": "Général",
+    "actionItemCategorySettings": "Catégories d’éléments d’action",
     "updateYourDetails": "Mettre à jour vos informations",
     "updateYourPassword": "Mettez à jour votre mot de passe",
     "updateOrganization": "Mettre à jour l'organisation",
@@ -449,7 +451,8 @@
     "noData": "Pas de données",
     "otherSettings": "Autres paramètres",
     "changeLanguage": "Changer la langue",
-    "manageCustomFields": "Gérer les Champs Personnalisés"
+    "manageCustomFields": "Gérer les Champs Personnalisés",
+    "actionItemCategories": "Catégories d’éléments d’action"
   },
   "deleteOrg": {
     "deleteOrganization": "Supprimer l'organisation",
@@ -724,5 +727,20 @@
     "Supprimer le champ personnalisé": "Supprimer le champ personnalisé",
     "fieldSuccessMessage": "Champ ajouté avec succès",
     "fieldRemovalSuccess": "Champ supprimé avec succès"
+  },
+  "orgActionItemCategories": {
+    "createButton": "Créez",
+    "editButton": "Éditez",
+    "enableButton": "Activez",
+    "disableButton": "Désactivez",
+    "updateActionItemCategory": "Mettre à jour",
+    "actionItemCategoryName": "Nom",
+    "actionItemCategoryDetails": "Détails de la catégorie d’élément d’action",
+    "enterName": "Entrez le nom",
+    "successfulCreation": "Catégorie d’élément d’action créée avec succès",
+    "successfulUpdation": "La catégorie d’élément d’action a été mise à jour avec succès",
+    "sameNameConflict": "Veuillez modifier le nom pour effectuer une mise à jour",
+    "categoryEnabled": "Catégorie d’action activée",
+    "categoryDisabled": "Catégorie d’action désactivée"
   }
 }
